fixed align nav a

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,9 @@ body.light-mode {
 
 .nav-container {
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
@@ -63,9 +65,7 @@ body.light-mode {
     color: var(--text-color);
     text-decoration: none;
     font-size: 1rem;
-    height: 100%;
     padding: 0 0.5rem;
-    line-height: 1.65;
     margin: 0;
 }
 
